# enterprise-manager

./: .gitignore  CMakeCache.txt  CMakeLists.txt  a.txt  client2.json  conanfile.txt  readme.md
data/clients/: client.json
data/suppliers/: supplier1.json  supplier2.json
src/: CMakeLists.txt
src/enterprise/: CMakeLists.txt
src/enterprise-manager/: CMakeLists.txt
src/enterprise-manager/src/: enterprise-manager.cc
src/enterprise/include/enterprise/: bill.h  client.h  company.h  entity.h  entity_type.h  regexs.h  status.h  supplier.h  test.h
src/enterprise/src/: bill.cc  client.cc  company.cc  entity.cc  regexs.cc  supplier.cc  test.cc
src/enterprise/test/: CMakeLists.txt  supplier-test.cc  test-bill.cc  test-client.cc  test-company.cc  test-entity.cc  test-main.cc  test-supplier.cc  test-test.cc
src/manager/: CMakeLists.txt
src/manager/include/: action.h  get_action.h  get_file.h  get_manual.h  manager.h
src/manager/src/: action.cc  enterprise-manager.cc  get_action.cc  get_file.cc  get_manual.cc  manager.cc
